Address review comments for ZIP64 End Of Central header tests